macros/tests/ui/entry_preinterrupt_return_cs_static.rs
#![no_main]

use msp430::interrupt::CriticalSection;
use msp430_rt_macros::entry;

fn init(cs: &'static CriticalSection<'static>) -> &'static CriticalSection<'static> {
    cs
}

#[entry(interrupt_enable(pre_interrupt = init))]
fn main(_cs: &CriticalSection) -> ! {
    loop {}
}
